# Modelling-and-Parallelized-Simulation

./: CMakeLists.txt  README.md
include/: Config.hpp  SpatialTree.hpp  Storage.hpp  TreeOperations.hpp
src/: SpatialTree.cpp  TreeOperations.cpp  main.cpp
tests/: test_spatial_tree.cpp  unit_tests.cpp
